---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE PROCEDURE insert_data(a integer, b integer) LANGUAGE SQL AS $$INSERT INTO tbl VALUES (a); INSERT INTO tbl VALUES (b);$$;"
---
CreateFunctionStmt@0..127
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Procedure@7..16 "PROCEDURE"
  Whitespace@16..17 " "
  Ident@17..28 "insert_data"
  Ascii40@28..29 "("
  FunctionParameter@29..38
    Ident@29..30 "a"
    Whitespace@30..31 " "
    TypeName@31..38
      Integer@31..38 "integer"
  Ascii44@38..39 ","
  Whitespace@39..40 " "
  FunctionParameter@40..49
    Ident@40..41 "b"
    Whitespace@41..42 " "
    TypeName@42..49
      Integer@42..49 "integer"
  Ascii41@49..50 ")"
  Whitespace@50..51 " "
  DefElem@51..63
    Language@51..59 "LANGUAGE"
    Whitespace@59..60 " "
    SqlP@60..63 "SQL"
  Whitespace@63..64 " "
  DefElem@64..126
    As@64..66 "AS"
    Whitespace@66..67 " "
    List@67..126
      Sconst@67..126 "$$INSERT INTO tbl VAL ..."
  Ascii59@126..127 ";"

